Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5yT8pjTqAkCkeJulTchgMr",
+    "id" : "0UbzPoYJlKkbum5b0dcwYM",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
