Automation summary for Force Undo Checkout testsYzNkOTMxOTgtNTYyZS00NG
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5GdptDDfrosjyfc2ZipBGM",
+    "id" : "7kAMxqFF4qacedPolEwlA8",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
