--- a/Explore/VCS_PROJ_UI/.VCS_PROJ_UI.Project.json
+++ b/Explore/VCS_PROJ_UI/.VCS_PROJ_UI.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "2SLMzGWAEAOkC2ggvkO7O9",
+    "id" : "1urPLfe3uZ8ilWrQGkoRaA",
     "name" : "VCS_PROJ_UI",
     "type" : "Project",
     "metadata" : {
