Automation summary for Force Undo Checkout testsYTg1ZmE0ODEtNGNkNi00ZT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7kAMxqFF4qacedPolEwlA8",
+    "id" : "g0MCeE6Kv2tdSujwYWfRu8",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
