Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3f8kTQvVCuFgmO3XTYd7U9",
+    "id" : "25matmciSIqbSk7oJ7AT0a",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
