--- a/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj1/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "fFjQd1fzY2PeYNeKQean4p",
+    "id" : "4JAEbXu65HCcHfor4tfHIW",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01002U1700000000065O"
+        "repoHandle" : "01002U17000000000661"
       },
       "contextAttributes" : [ {
         "name" : "id",
