--- a/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj2/BulkUnlink_FOLDER/.BulkUnlink_LTF_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "jzPSm3Ud4Wjg4HokwH5TMM",
+    "id" : "gnFuOXnvJAXltqeTscz9YV",
     "name" : "BulkUnlink_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01002U1700000000065K"
+        "repoHandle" : "01002U1700000000065W"
       },
       "contextAttributes" : [ {
         "name" : "id",
