Automation summary for Force Undo Checkout testsZWQyMjNkN2QtN2NlZi00MT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "6TyUbDBwaUabMQxIx2c4Sj",
+    "id" : "a30wDqbpb6HfGhyCBgZhgu",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
