--- a/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
+++ b/Explore/BulkUnlinkTestProj3/.BulkUnlink_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "eL1r3iSFLe4bub4ja9kHEJ",
+    "id" : "0kY534QAAeogG4UNbmIxMi",
     "name" : "BulkUnlink_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01002U17000000000662"
+        "repoHandle" : "01002U170000000006C5"
       },
       "contextAttributes" : [ {
         "name" : "id",
