Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "h3IXtfgAnkre3vJ9BXySOi",
+    "id" : "3wp5cqtCrYCiuA7VethC6A",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
