Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "3wp5cqtCrYCiuA7VethC6A",
+    "id" : "4kSz1IR0hGKlIW6rb35Wqu",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
