Automation summary for Force Undo Checkout testsYjdiY2Y5YmMtMjIxOS00Ym
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "a30wDqbpb6HfGhyCBgZhgu",
+    "id" : "3B4JHLEns3qhILbeXPwnQJ",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
