Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "81cXXfzbIgof7D1ZVKQ8c1",
+    "id" : "g9mJTVx0KyPbOTLgKo7qs5",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
