Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
+++ b/Explore/VCS_DisableVersioningTest/.VCS_DisableVersioningTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "18TUWJxaF0Dl2K8zdhI06u",
+    "id" : "gEUD05sV9ediJJfGrLDhQK",
     "name" : "VCS_DisableVersioningTest",
     "type" : "Project",
     "metadata" : {
