Automation summary for Force Undo Checkout testsY2E1ZGVlOGYtMGViZC00ZD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "14AJfDxZh0Ng2RGKbhbFu5",
+    "id" : "jSO6NnQISqIeenHeRXSCMH",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
